tests/compile-fail/socket-thread-unsafe.stderr
error[E0277]: `*mut c_void` cannot be shared between threads safely
  --> tests/compile-fail/socket-thread-unsafe.rs:13:17
   |
13 |     assert_send(s);
   |     ----------- ^ `*mut c_void` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Socket`, the trait `Sync` is not implemented for `*mut c_void`
note: required because it appears within the type `Socket`
  --> src/lib.rs
   |
   | pub struct Socket {
   |            ^^^^^^
   = note: required for `&Socket` to implement `Send`
note: required by a bound in `assert_send`
  --> tests/compile-fail/socket-thread-unsafe.rs:7:19
   |
 7 | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`
